--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  <header> learn code camp </header>
+  <h1>Learn code camp</h1>
+
+  <h2>响应式网页设计</h2>
   <div>
     <ol>
-      <li> <a href="learn-html-by-build-a-cat-photo-app/index.html">learn-html-by-build-a-cat-photo-app</a> </li>
-      <li> <a href="learn-basic-css-by-building-a-cafe-menu/index.html">learn-basic-css-by-building-a-cafe-menu</a> </li>
-      <li> <a href="learn-css-colors-by-building-a-set-of-colored-markers/index.html">learn-css-colors-by-building-a-set-of-colored-markers</a> </li>
-      <li> <a href="learn-html-forms-by-building-a-registration-form/index.html">learn-html-forms-by-building-a-registration-form</a> </li>
-      <li> <a href="survey-form/index.html">survey-form</a> </li>
-      <li> <a href="photo-gallery/index.html">photo-gallery</a> </li>
+      <li> <a href="01-responsive-web-design/cat-photo-app/index.html">CatPhoto App</a> </li>
     </ol>
   </div>
 </body>
