--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Learn code camp</h1>
+  <h1>Learn Code Camp</h1>
 
   <h2>响应式网页设计</h2>
   <div>
     <ol>
-      <li> <a href="01-responsive-web-design/cat-photo-app/index.html">CatPhoto App</a> </li>
+      <li> <a href="01-responsive-web-design/cat-photo-app/index.html">Learn HTML by Building a Cat Photo App</a> </li>
+      <li> <a href="01-responsive-web-design/cafe-menu/index.html">Learn Basic CSS by Building a Cafe Menu</a> </li>
+      <li> <a href="01-responsive-web-design/colored-markers/index.html">Learn CSS Colors by Building a Set of Colored Markers</a> </li>
+      <li> <a href="01-responsive-web-design/registration-form/index.html">Learn HTML Forms By Building a Registration Form</a> </li>
+      <li> <a href="01-responsive-web-design/survey-form/index.html">Survey Form</a> </li>
+      <li> <a href="01-responsive-web-design/photo-gallery/index.html">Photo Gallery</a> </li>
+      <li> <a href="01-responsive-web-design/nutrition-label/index.html">nutrition-label</a></li>
     </ol>
   </div>
 </body>
